--- a/w3/config.ini
+++ b/w3/config.ini
@@ -1,5 +1,59 @@
 [Section1]
+batch_size: 16
+image_size: 64
+units: 4096
+activation: relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
 
+[Section2]
+batch_size: 16
+image_size: 64
+units: 2048
+activation: relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+[Section3]
+batch_size: 16
+image_size: 64
+units: 1024
+activation: relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+[Sectio4]
+batch_size: 16
+image_size: 64
+units: 512
+activation: relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+[Section5]
+batch_size: 16
+image_size: 64
+units: 4096,2048
+activation: relu,relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+[Section6]
 batch_size: 16
 image_size: 64
 units: 2048,1024
@@ -9,3 +63,28 @@ optimizer: sgd
 metrics: accuracy
 patch: False
 patch_size: 64
+
+[Section7]
+batch_size: 16
+image_size: 64
+units: 1024,512
+activation: relu,relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+[Section8]
+batch_size: 16
+image_size: 64
+units: 512,256
+activation: relu,relu
+loss: categorical_crossentropy
+optimizer: sgd
+metrics: accuracy
+patch: False
+patch_size: 64
+
+
+
