Added lots of configs and made patches multithreading

--- a/w3/config.ini
+++ b/w3/config.ini
@@ -9,26 +9,251 @@
 ;patch: False
 ;patch_size: 64
 
-[Section1]
+[Section-relu-1]
 units: 4096
 
-[Section2]
+[Section-relu-2]
 units: 2048
 
-[Section3]
+[Section-relu-3]
 units: 1024
 
-[Sectio4]
+[Section-relu-4]
 units: 512
 
-[Section5]
+[Section-relu-5]
 units: 4096,2048
 
-[Section6]
+[Section-relu-6]
 units: 2048,1024
 
-[Section7]
+[Section-relu-7]
 units: 1024,512
 
-[Section8]
+[Section-relu-8]
 units: 512,256
+
+[Section-tanh-1]
+units: 4096
+activation: tanh
+
+[Section-tanh-2]
+units: 2048
+activation: tanh
+
+[Section-tanh-3]
+units: 1024
+activation: tanh
+
+[Section-tanh-4]
+units: 512
+activation: tanh
+
+[Section-tanh-5]
+units: 4096,2048
+activation: tanh,tanh
+
+[Section-tanh-6]
+units: 2048,1024
+activation: tanh,tanh
+
+[Section-tanh-7]
+units: 1024,512
+activation: tanh,tanh
+
+[Section-tanh-8]
+units: 512,256
+activation: tanh,tanh
+
+[Section-linear-1]
+units: 4096
+activation: linear
+
+[Section-linear-2]
+units: 2048
+activation: linear
+
+[Section-linear-3]
+units: 1024
+activation: linear
+
+[Section-linear-4]
+units: 512
+activation: linear
+
+[Section-linear-5]
+units: 4096,2048
+activation: linear,linear
+
+[Section-linear-6]
+units: 2048,1024
+activation: linear,linear
+
+[Section-linear-7]
+units: 1024,512
+activation: linear,linear
+
+[Section-linear-8]
+units: 512,256
+activation: linear,linear
+
+[Section-elu-1]
+units: 4096
+activation: elu
+
+[Section-elu-2]
+units: 2048
+activation: elu
+
+[Section-elu-3]
+units: 1024
+activation: elu
+
+[Section-elu-4]
+units: 512
+activation: elu
+
+[Section-elu-5]
+units: 4096,2048
+activation: elu,elu
+
+[Section-elu-6]
+units: 2048,1024
+activation: elu,elu
+
+[Section-elu-7]
+units: 1024,512
+activation: elu,elu
+
+[Section-elu-8]
+units: 512,256
+activation: elu,elu
+
+[Section-softmax-1]
+units: 4096
+activation: softmax
+
+[Section-softmax-2]
+units: 2048
+activation: softmax
+
+[Section-softmax-3]
+units: 1024
+activation: softmax
+
+[Section-softmax-4]
+units: 512
+activation: softmax
+
+[Section-softmax-5]
+units: 4096,2048
+activation: softmax,softmax
+
+[Section-softmax-6]
+units: 2048,1024
+activation: softmax,softmax
+
+[Section-softmax-7]
+units: 1024,512
+activation: softmax,softmax
+
+[Section-softmax-8]
+units: 512,256
+activation: softmax,softmax
+
+[Section-adam-1]
+units: 4096
+optimizer: adam
+
+[Section-adam-2]
+units: 2048
+optimizer: adam
+
+[Section-adam-3]
+units: 1024
+optimizer: adam
+
+[Section-adam-4]
+units: 512
+optimizer: adam
+
+[Section-adam-5]
+units: 4096,2048
+optimizer: adam
+
+[Section-adam-6]
+units: 2048,1024
+optimizer: adam
+
+[Section-adam-7]
+units: 1024,512
+optimizer: adam
+
+[Section-adam-8]
+units: 512,256
+optimizer: adam
+
+[Section-msq-1]
+units: 4096
+loss: mean_squared_error
+
+[Section-msq-2]
+units: 2048
+loss: mean_squared_error
+
+[Section-msq-3]
+units: 1024
+loss: mean_squared_error
+
+[Section-msq-4]
+units: 512
+loss: mean_squared_error
+
+[Section-msq-5]
+units: 4096,2048
+loss: mean_squared_error
+
+[Section-msq-6]
+units: 2048,1024
+loss: mean_squared_error
+
+[Section-msq-7]
+units: 1024,512
+loss: mean_squared_error
+
+[Section-msq-8]
+units: 512,256
+loss: mean_squared_error
+
+[Section-patch-1]
+units: 4096
+patch: True
+
+[Section-patch-2]
+units: 2048
+patch: True
+
+[Section-patch-3]
+units: 1024
+patch: True
+
+[Section-patch-4]
+units: 512
+patch: True
+
+[Section-patch-5]
+units: 4096,2048
+patch: True
+
+[Section-patch-6]
+units: 2048,1024
+patch: True
+
+[Section-patch-7]
+units: 1024,512
+patch: True
+
+[Section-patch-8]
+units: 512,256
+patch: True
+
