--- a/w3/config.ini
+++ b/w3/config.ini
@@ -11,15 +11,19 @@
 
 [Section-relu-1]
 units: 4096
+activation: relu
 
 [Section-relu-2]
 units: 2048
+activation: relu
 
 [Section-relu-3]
 units: 1024
+activation: relu
 
 [Section-relu-4]
 units: 512
+activation: relu
 
 [Section-relu-5]
 units: 4096,2048
