Minor config fixes

--- a/w3/config.ini
+++ b/w3/config.ini
@@ -168,18 +168,22 @@ activation: softmax,softmax
 [Section-adam-1]
 units: 4096
 optimizer: adam
+activation: relu
 
 [Section-adam-2]
 units: 2048
 optimizer: adam
+activation: relu
 
 [Section-adam-3]
 units: 1024
 optimizer: adam
+activation: relu
 
 [Section-adam-4]
 units: 512
 optimizer: adam
+activation: relu
 
 [Section-adam-5]
 units: 4096,2048
@@ -200,18 +204,22 @@ optimizer: adam
 [Section-msq-1]
 units: 4096
 loss: mean_squared_error
+activation: relu
 
 [Section-msq-2]
 units: 2048
 loss: mean_squared_error
+activation: relu
 
 [Section-msq-3]
 units: 1024
 loss: mean_squared_error
+activation: relu
 
 [Section-msq-4]
 units: 512
 loss: mean_squared_error
+activation: relu
 
 [Section-msq-5]
 units: 4096,2048
@@ -232,18 +240,22 @@ loss: mean_squared_error
 [Section-patch-1]
 units: 4096
 patch: True
+activation: relu
 
 [Section-patch-2]
 units: 2048
 patch: True
+activation: relu
 
 [Section-patch-3]
 units: 1024
 patch: True
+activation: relu
 
 [Section-patch-4]
 units: 512
 patch: True
+activation: relu
 
 [Section-patch-5]
 units: 4096,2048
