Added more configs

--- a/w3/config.ini
+++ b/w3/config.ini
@@ -273,3 +273,86 @@ patch: True
 units: 512,256
 patch: True
 
+; 64
+[Section-triple-relu-1]
+units: 4096,2048,1024
+activation: relu,relu,relu
+
+[Section-triple-relu-2]
+units: 2048,1024,512
+activation: relu,relu,relu
+
+[Section-triple-relu-3]
+units: 1024,512,256
+activation: relu,relu,relu
+
+[Section-triple-relu-4]
+units: 512,256,128
+activation: relu,relu,relu
+
+[Section-triple-tanh-1]
+units: 4096,2048,1024
+activation: tanh,tanh,tanh
+
+[Section-triple-tanh-2]
+units: 2048,1024,512
+activation: tanh,tanh,tanh
+
+[Section-triple-tanh-3]
+units: 1024,512,256
+activation: tanh,tanh,tanh
+
+[Section-triple-tanh-4]
+units: 512,256,128
+activation: tanh,tanh,tanh
+
+[Section-triple-linear-1]
+units: 4096,2048,1024
+activation: linear,linear,linear
+
+[Section-triple-linear-2]
+units: 2048,1024,512
+activation: linear,linear,linear
+
+[Section-triple-linear-3]
+units: 1024,512,256
+activation: linear,linear,linear
+
+[Section-triple-linear-4]
+units: 512,256,128
+activation: linear,linear,linear
+
+[Section-selu-1]
+units: 4096
+activation: selu
+
+[Section-selu-2]
+units: 2048
+activation: selu
+
+[Section-selu-3]
+units: 1024
+activation: selu
+
+[Section-selu-4]
+units: 512
+activation: selu
+
+[Section-selu-5]
+units: 4096,2048
+activation: selu,selu
+
+[Section-selu-6]
+units: 2048,1024
+activation: selu,selu
+
+[Section-selu-7]
+units: 1024,512
+activation: selu,selu
+
+[Section-selu-8]
+units: 512,256
+activation: selu,selu
+
+;86
+
