Prepare patches config

--- a/w3/config.ini
+++ b/w3/config.ini
@@ -6,7 +6,7 @@
 ;loss: categorical_crossentropy
 ;optimizer: sgd
 ;metrics: accuracy
-;patch: False
+;patches: False
 ;patch_size: 64
 
 [Section-relu-1]
@@ -237,41 +237,46 @@ loss: mean_squared_error
 units: 512,256
 loss: mean_squared_error
 
-[Section-patch-1]
+; 56
+[Section-patches-1]
 units: 4096
-patch: True
 activation: relu
+patches: True
 
-[Section-patch-2]
+[Section-patches-2]
 units: 2048
-patch: True
 activation: relu
+patches: True
 
-[Section-patch-3]
+[Section-patches-3]
 units: 1024
-patch: True
 activation: relu
+patches: True
 
-[Section-patch-4]
+[Section-patches-4]
 units: 512
-patch: True
 activation: relu
+patches: True
 
-[Section-patch-5]
+[Section-patches-5]
 units: 4096,2048
-patch: True
+activation: relu,relu
+patches: True
 
-[Section-patch-6]
+[Section-patches-6]
 units: 2048,1024
-patch: True
+activation: relu,relu
+patches: True
 
-[Section-patch-7]
+[Section-patches-7]
 units: 1024,512
-patch: True
+activation: relu,relu
+patches: True
 
-[Section-patch-8]
+[Section-patches-8]
 units: 512,256
-patch: True
+activation: relu,relu
+patches: True
 
 ; 64
 [Section-triple-relu-1]
